--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,34 @@
 {
-    "root": true,
-    "extends": "airbnb-base",
     "env": {
-        "node": true,
-        "es6": true,
-        "mocha": true
+        "browser": true,
+        "es2021": true,
+        "node": true
     },
-    "parser": "@babel/eslint-parser",
-    "parserOptions": {
-        "ecmaVersion": 2015,
-        "sourceType": "module",
-        "allowImportExportEverywhere": true
-    },
+    "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "airbnb",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
+    "settings": {
+    "import/resolver": {
+      "typescript": {}
+    }
+  },
     "rules": {
-        "linebreak-style": 0,
+        "@typescript-eslint/indent": ["error", 2],
+        "@typescript-eslint/no-unused-vars": "error",
+        // "@typescript-eslint/no-explicit-any": "error",
+        "camelcase": "off",
+        "allowShortCircuit": "off", 
+        "no-unused-expressions": "off",
+        "allowTernary": "off",
+        "no-console": "off",
+        "linebreak-style": "off",
         "quotes": [
             "error",
             "double"
@@ -22,41 +37,23 @@
             "error",
             "always"
         ],
-        "no-unused-vars": "off",
-        "no-plusplus": "off",
-        "no-undef": "off",
-        "comma-dangle": "off",
         "consistent-return": "off",
-        "no-tabs": "off",
-        "prefer-const": "off",
-        "max-len": "off",
-        "global-require": "off",
-        "import/no-unresolved": "off",
-        "import/prefer-default-export": "off",
+        "arrow-body-style": "off",
         "import/no-dynamic-require": "off",
-        "no-console": "off",
-        "camelcase": "off",
-        "import/no-extraneous-dependencies": [
-            "error",
-            {
-                "devDependencies": true
-            }
-        ],
-        "arrow-parens": [
-            2,
-            "as-needed"
-        ],
+        "import/no-extraneous-dependencies": "off",
+        "no-unused-vars": "off",
+        "prefer-const": "off",
         "no-useless-catch": "off",
-        "no-use-before-define": [
-            "error",
-            {
-                "functions": false,
-                "classes": false
-            }
-        ],
-        "require-jsdoc": 0,
-        "no-useless-concat": 0,
-        "operator-linebreak": 0,
-        "valid-jsdoc": "error"
+        "no-restricted-syntax": "off",
+        "guard-for-in": "off",
+        "comma-dangle": "off",
+        "no-undef": "off",
+        "no-underscore-dangle": "off",
+        "no-shadow": "off",
+        "max-len": "off",
+        "no-plusplus": "off",
+        "no-throw-literal": "off",
+        "no-param-reassign": "off",
+        "import/extensions": 0
     }
 }
