--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "findate-backend",
-  "description": "",
+  "name": "findate",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.js",
-    "lint": "eslint src/  --fix",
-    "migration": "npm run migrate:undo && npm run migrate",
-    "migrate": "npx sequelize-cli db:migrate",
-    "migrate:undo": "npx sequelize-cli db:migrate:undo:all",
-    "seeder": "npm run seed:undo && npm run seed",
-    "seed": "npx sequelize-cli db:seed:all",
-    "seed:undo": "npx sequelize-cli db:seed:undo:all"
+    "dev": "nodemon src/app.ts",
+    "postinstall": "tsc",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint --fix src/**/*.ts",
+    "build": "tsc",
+    "seed": "ts-node src/seeders/index.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Findate/findate-backend.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -30,33 +27,36 @@
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "joi": "^17.6.1",
+    "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.0.4",
+    "mongoose": "^6.6.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "mysql2": "^2.3.3",
-    "path": "^0.12.7",
-    "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4",
-    "pino": "^8.6.0",
-    "sequelize": "^6.23.2",
-    "sequelize-cli": "^6.5.1"
+    "nodemailer": "^6.8.0",
+    "pino": "^8.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.3",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/node": "^7.19.1",
-    "@babel/plugin-transform-runtime": "^7.19.1",
-    "@babel/preset-env": "^7.19.3",
     "@babel/register": "^7.18.9",
-    "@babel/runtime": "^7.19.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.186",
+    "@types/luxon": "^3.0.1",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.7.23",
+    "@types/nodemailer": "^6.4.6",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^3.5.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
