--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,5 @@ node_modules/
 .env.test
 
 dist/
-src/models/notificationModel.ts
-src/validations/notificationValidation.ts
+src/models/notification.ts
+src/validations/notification.ts
