--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
+    "eslint.validate": [
+        "javascript"
+    ],
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+    "git.ignoreLimitWarning": true,
     "cSpell.words": [
-        "Waitlist"
+        "MAILTRAP"
     ]
 }
