--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,5 @@
         "javascript"
     ],
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-    "git.ignoreLimitWarning": true,
-    "cSpell.words": [
-        "MAILTRAP"
-    ]
+    "git.ignoreLimitWarning": true
 }
